simplf/parser/simplfParser.java
// Generated from simplf.g4 by ANTLR 4.13.2

    package simplf.parser;
    import simplf.Stmt;
    import simplf.Stmt.*;

    import simplf.Expr;
    import simplf.Expr.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class simplfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEFT_PAREN=1, RIGHT_PAREN=2, LEFT_BRACE=3, RIGHT_BRACE=4, COMMA=5, DOT=6, 
		MINUS=7, PLUS=8, SEMICOLON=9, COLON=10, STAR=11, SLASH=12, BANG=13, BANG_EQUAL=14, 
		EQUAL=15, EQUAL_EQUAL=16, GREATER=17, GREATER_EQUAL=18, LESS=19, LESS_EQUAL=20, 
		AND=21, CLASS=22, ELSE=23, FALSE=24, FOR=25, FUN=26, IF=27, NIL=28, OR=29, 
		PRINT=30, SUPER=31, THIS=32, TRUE=33, VAR=34, WHILE=35, CHAR=36, FLOAT=37, 
		STRING=38, IDENTIFIER=39, STRINGLIT=40, NUMBER=41, COMMENT=42, WHITESPACE=43;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_funDecl = 2, RULE_params = 3, 
		RULE_param = 4, RULE_varDecl = 5, RULE_statement = 6, RULE_block = 7, 
		RULE_ifStatement = 8, RULE_whileStatement = 9, RULE_forStatement = 10, 
		RULE_exprStatement = 11, RULE_printStatement = 12, RULE_arguments = 13, 
		RULE_expression = 14, RULE_literal = 15, RULE_type = 16, RULE_id = 17, 
		RULE_or = 18, RULE_and = 19, RULE_equal = 20, RULE_bang_equal = 21, RULE_equal_equal = 22, 
		RULE_greater = 23, RULE_greater_equal = 24, RULE_less = 25, RULE_less_equal = 26, 
		RULE_plus = 27, RULE_minus = 28, RULE_slash = 29, RULE_star = 30, RULE_bang = 31, 
		RULE_rparen = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "funDecl", "params", "param", "varDecl", "statement", 
			"block", "ifStatement", "whileStatement", "forStatement", "exprStatement", 
			"printStatement", "arguments", "expression", "literal", "type", "id", 
			"or", "and", "equal", "bang_equal", "equal_equal", "greater", "greater_equal", 
			"less", "less_equal", "plus", "minus", "slash", "star", "bang", "rparen"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "','", "'.'", "'-'", "'+'", "';'", 
			"':'", "'*'", "'/'", "'!'", "'!='", "'='", "'=='", "'>'", "'>='", "'<'", 
			"'<='", "'and'", "'class'", "'else'", "'false'", "'for'", "'fun'", "'if'", 
			"'nil'", "'or'", "'print'", "'super'", "'this'", "'true'", "'var'", "'while'", 
			"'char'", "'float'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "COMMA", 
			"DOT", "MINUS", "PLUS", "SEMICOLON", "COLON", "STAR", "SLASH", "BANG", 
			"BANG_EQUAL", "EQUAL", "EQUAL_EQUAL", "GREATER", "GREATER_EQUAL", "LESS", 
			"LESS_EQUAL", "AND", "CLASS", "ELSE", "FALSE", "FOR", "FUN", "IF", "NIL", 
			"OR", "PRINT", "SUPER", "THIS", "TRUE", "VAR", "WHILE", "CHAR", "FLOAT", 
			"STRING", "IDENTIFIER", "STRINGLIT", "NUMBER", "COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "simplf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public simplfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Stmt> val = new ArrayList<>();;
		public DeclarationContext declaration;
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3910014083210L) != 0)) {
				{
				{
				setState(66);
				((ProgramContext)_localctx).declaration = declaration();
				_localctx.val.add(((ProgramContext)_localctx).declaration.val);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Stmt val;
		public FunDeclContext funDecl;
		public VarDeclContext varDecl;
		public StatementContext statement;
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				((DeclarationContext)_localctx).funDecl = funDecl();
				((DeclarationContext)_localctx).val =  ((DeclarationContext)_localctx).funDecl.val;
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((DeclarationContext)_localctx).varDecl = varDecl();
				((DeclarationContext)_localctx).val =  ((DeclarationContext)_localctx).varDecl.val;
				}
				break;
			case LEFT_PAREN:
			case LEFT_BRACE:
			case MINUS:
			case BANG:
			case FALSE:
			case FOR:
			case IF:
			case NIL:
			case PRINT:
			case TRUE:
			case WHILE:
			case IDENTIFIER:
			case STRINGLIT:
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				((DeclarationContext)_localctx).statement = statement();
				((DeclarationContext)_localctx).val =  ((DeclarationContext)_localctx).statement.val;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunDeclContext extends ParserRuleContext {
		public Stmt val;
		public IdContext id;
		public TypeContext type;
		public BlockContext block;
		public ParamsContext params;
		public TerminalNode FUN() { return getToken(simplfParser.FUN, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LEFT_PAREN() { return getToken(simplfParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(simplfParser.RIGHT_PAREN, 0); }
		public TerminalNode COLON() { return getToken(simplfParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterFunDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitFunDecl(this);
		}
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDecl);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(FUN);
				setState(86);
				((FunDeclContext)_localctx).id = id();
				setState(87);
				match(LEFT_PAREN);
				setState(88);
				match(RIGHT_PAREN);
				setState(89);
				match(COLON);
				setState(90);
				((FunDeclContext)_localctx).type = type();
				setState(91);
				((FunDeclContext)_localctx).block = block();
				((FunDeclContext)_localctx).val =  new Stmt.Function(((FunDeclContext)_localctx).id.val, new ArrayList<>(), ((FunDeclContext)_localctx).block.val, ((FunDeclContext)_localctx).type.r, new ArrayList<>());
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(FUN);
				setState(95);
				((FunDeclContext)_localctx).id = id();
				setState(96);
				match(LEFT_PAREN);
				setState(97);
				((FunDeclContext)_localctx).params = params();
				setState(98);
				match(RIGHT_PAREN);
				setState(99);
				match(COLON);
				setState(100);
				((FunDeclContext)_localctx).type = type();
				setState(101);
				((FunDeclContext)_localctx).block = block();
				((FunDeclContext)_localctx).val =  new Stmt.Function(((FunDeclContext)_localctx).id.val, ((FunDeclContext)_localctx).params.names, ((FunDeclContext)_localctx).block.val, ((FunDeclContext)_localctx).type.r, ((FunDeclContext)_localctx).params.types);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<simplf.Token> names = new ArrayList<>();
		public List<simplf.DataType> types = new ArrayList<>();
		public ParamContext param1;
		public ParamContext parami;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(simplfParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(simplfParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			((ParamsContext)_localctx).param1 = param();
			_localctx.names.add(((ParamsContext)_localctx).param1.p); _localctx.types.add(((ParamsContext)_localctx).param1.ty);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(108);
				match(COMMA);
				setState(109);
				((ParamsContext)_localctx).parami = param();
				_localctx.names.add(((ParamsContext)_localctx).parami.p); _localctx.types.add(((ParamsContext)_localctx).parami.ty);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public simplf.Token p;
		public simplf.DataType ty;
		public IdContext id;
		public TypeContext type;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode COLON() { return getToken(simplfParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((ParamContext)_localctx).id = id();
			setState(118);
			match(COLON);
			setState(119);
			((ParamContext)_localctx).type = type();
			 ((ParamContext)_localctx).p =  ((ParamContext)_localctx).id.val; ((ParamContext)_localctx).ty =  ((ParamContext)_localctx).type.r; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends ParserRuleContext {
		public Stmt val;
		public IdContext id;
		public TypeContext type;
		public ExpressionContext expression;
		public TerminalNode VAR() { return getToken(simplfParser.VAR, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode COLON() { return getToken(simplfParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(simplfParser.SEMICOLON, 0); }
		public TerminalNode EQUAL() { return getToken(simplfParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitVarDecl(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDecl);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(VAR);
				setState(123);
				((VarDeclContext)_localctx).id = id();
				setState(124);
				match(COLON);
				setState(125);
				((VarDeclContext)_localctx).type = type();
				setState(126);
				match(SEMICOLON);
				((VarDeclContext)_localctx).val =  new Stmt.Var(((VarDeclContext)_localctx).id.val, null, ((VarDeclContext)_localctx).type.r);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(VAR);
				setState(130);
				((VarDeclContext)_localctx).id = id();
				setState(131);
				match(COLON);
				setState(132);
				((VarDeclContext)_localctx).type = type();
				setState(133);
				match(EQUAL);
				setState(134);
				((VarDeclContext)_localctx).expression = expression(0);
				setState(135);
				match(SEMICOLON);
				((VarDeclContext)_localctx).val =  new Stmt.Var(((VarDeclContext)_localctx).id.val, ((VarDeclContext)_localctx).expression.val, ((VarDeclContext)_localctx).type.r);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Stmt val;
		public ExprStatementContext exprStatement;
		public IfStatementContext ifStatement;
		public PrintStatementContext printStatement;
		public WhileStatementContext whileStatement;
		public ForStatementContext forStatement;
		public BlockContext block;
		public ExprStatementContext exprStatement() {
			return getRuleContext(ExprStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_PAREN:
			case MINUS:
			case BANG:
			case FALSE:
			case NIL:
			case TRUE:
			case IDENTIFIER:
			case STRINGLIT:
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				((StatementContext)_localctx).exprStatement = exprStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).exprStatement.val;
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				((StatementContext)_localctx).ifStatement = ifStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).ifStatement.val;
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				((StatementContext)_localctx).printStatement = printStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).printStatement.val;
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				((StatementContext)_localctx).whileStatement = whileStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).whileStatement.val;
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				((StatementContext)_localctx).forStatement = forStatement();
				((StatementContext)_localctx).val =  ((StatementContext)_localctx).forStatement.val;
				}
				break;
			case LEFT_BRACE:
				enterOuterAlt(_localctx, 6);
				{
				setState(155);
				((StatementContext)_localctx).block = block();
				((StatementContext)_localctx).val =  new Stmt.Block(((StatementContext)_localctx).block.val);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<Stmt> val;
		public ProgramContext program;
		public TerminalNode LEFT_BRACE() { return getToken(simplfParser.LEFT_BRACE, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(simplfParser.RIGHT_BRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simplfListener ) ((simplfListener)listener).exitBlock(this);
		}
	}
